<resources>
    <string name="app_name">IndividualAssignment4-2</string>
    <string name="action_settings">Settings</string>
    <string name="enter_word">Enter Word</string>
    <string name="find_synonym">Find Synonym</string>
    <string name="find_synonym2">Find Synonym:</string>
    <string name="welcome">Welcome!</string>
    <string name="word">word1</string>
    <string name="word1">Word:</string>
    <string name="enter_wordSF">Enter Word</string>
    <string name="enter_wordFS">Enter Word</string>
    <string name="enter_wordFS2">Enter Word</string>
    <string name="pair">Pair:</string>
    <string name="button">Button</string>
</resources>
