<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

    <TextView
        android:id="@+id/enterWordR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Enter a word:"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        tools:ignore="HardcodedText,InefficientWeight" />

        <EditText
            android:id="@+id/enterWordFS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:text="@string/enter_wordFS" />

        <TextView
            android:id="@+id/wordPair"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.09"
            android:text="@string/pair"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <EditText
            android:id="@+id/enterWordFS2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:text="@string/enter_wordFS2" />

    <Button
        android:id="@+id/BsubmitResults"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onSubmitClick"
        android:text="Submit"
        tools:ignore="HardcodedText" />
</LinearLayout>
