<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:toolbarId="@+id/toolbar">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/colorPrimaryDark"
                android:minHeight="108dp"></android.support.v7.widget.Toolbar>

            <TextView
                android:id="@+id/welcome"
                android:layout_width="308dp"
                android:layout_height="match_parent"
                android:text="@string/welcome"
                android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                android:textColor="@android:color/background_light" />
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="atrashal.individualassignment4.MainActivity"
            android:orientation="vertical"
            android:weightSum="1">

            <android.support.design.widget.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/AppTheme.AppBarOverlay">

            </android.support.design.widget.AppBarLayout>

            <TextView
                android:id="@+id/findSynonym"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/find_synonym2"
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />

            <EditText
                android:id="@+id/enterWord"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:ems="10"
                android:inputType="text"
                android:maxLines="1"
                android:selectAllOnFocus="true"
                android:text="@string/enter_word"
                tools:ignore="InefficientWeight" />

            <Button
                android:id="@+id/BenterValues"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:onClick="onButtonClick"
                android:text="Enter Values"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="HardcodedText" />

            <Button
                android:id="@+id/Bsynonym"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:onClick="onButtonClick"
                android:text="Find Synonym" />

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>